--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>sitv好莱坞</title>
+    <title>sitv-好莱坞</title>
     <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
