--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>sitv-好莱坞</title>
-    <link rel="stylesheet" href="static/css/app.css">
+    <!-- <link rel="stylesheet" href="static/css/app.css"> -->
   </head>
   <body>
     <div id="app"></div>
