--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="page-view-size" content="1280*720" />
     <title>sitv-好莱坞</title>
     <!-- <link rel="stylesheet" href="static/css/app.css"> -->
   </head>
