--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="page-view-size" content="1280*720" />
+    <meta http-equiv="Expires" CONTENT="0">
+    <meta http-equiv="Cache-Control" CONTENT="no-cache">
+    <meta http-equiv="Pragma" content="no-cache">
     <title>sitv-好莱坞</title>
-    <!-- <link rel="stylesheet" href="static/css/app.css"> -->
+    <link rel="stylesheet" href="static/css/app.css">
   </head>
   <body>
     <div id="app"></div>
